# Sequence10

./: .gitignore  00 Readme.md  CMakeLists.txt  Deployment.json  MasterComponent.json  MasterGameConfig.json  MasterGameConfig.jsonc  README.md  Summary.md  battle.ts  env.example  fileindex.md  loot.ts  lootcore.ts  main.cpp  package.json  schema.sql  session_changes.patch  stitch.cpp  summary.txt  system_manifest.json  testloot.js  vercel.json
.github/workflows/: Release.yml  ci.yml  codeql.yml  deploy.yml  keep-alive.yml  sanatizers.yml
client/: CMakeLists.txt
client/src/: asset_manager.hpp  device_id.hpp  format.hpp  main.cpp  paper_doll.cpp
database/: rate_limit_pity.sql  schema.sql
docs/: Architecture.md  build.md
misc/: Masterprompt.md
scripts/: api.sh  gen_manifest.py
scripts/sql/: reset.sql  seed.sql
server/: package-lock.json  package.json  tsconfig.json  vercel.json
server/api/: _ai.ts  _bloodline_roll.ts  _db.ts  _format.ts  _herogen.ts  _namegen.ts  _narrative_parse.ts  _player.ts  _power.ts  _progression.ts  _ratelimit.ts  _summon_rates.ts  _synergy.ts  affinity.ts  ascend.ts  battle.ts  battle_v2.ts  chapters.ts  health.ts  heroes.ts  heros.ts  idle.ts  levelup.ts  loot.ts  narrative.ts  player.ts  progression.ts
server/public/: index.html
server/tests/: affinity.test.cjs  damage.test.cjs  format.test.cjs  integration.test.cjs  narrative_parse.test.cjs  power.test.cjs  progression.test.cjs  run-all.cjs  summon.test.cjs  synergy.test.cjs  test_loot.js
